--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,19 +1,27 @@
-name: pwtest
-
+name: Playwright Tests
 on:
   push:
-    branches: main
+    branches: [main, master]
   pull_request:
-    branches: main
-
+    branches: [main, master]
 jobs:
-  build:
+  test:
+    timeout-minutes: 60
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: 18
-      - run: npx playwright install --with-deps chromium
-      - run: npx playwright test
+      - name: Install dependencies
+        run: npm ci
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
+      - name: Run Playwright tests
+        run: npx playwright test
+      - uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
